--- a/Web Pro Players EA FC/styles.css
+++ b/Web Pro Players EA FC/styles.css
@@ -3,16 +3,16 @@ body {
     padding: 0;
 }
 
-.content{
+.content {
     border: solid 1px red;
     background-image: url('/Imagenes/logo-two.png');
-background-repeat: round;
-overflow: hidden;
-background-color: white;
+    background-repeat: initial;
+    overflow: hidden;
+    background-color: white;
 }
 
-.content::before {
-    content: ''; 
+/* /* .content::before {
+    content: '';
     position: absolute;
     top: 0;
     left: 0;
@@ -20,12 +20,14 @@ background-color: white;
     height: 100%;
     background-image: url('/Imagenes/logo-two.png');
     background-repeat: round;
-    opacity: 1.5; /* Ajusta la opacidad para que sea una verdadera marca de agua */
+    opacity: 1.5;
     pointer-events: none;
-    z-index: -1;
-}
+z-index: -1;
+} */
 
-.logo-div{
+
+
+*/ .logo-div {
     position: static;
     display: flex;
     align-items: center;
@@ -34,10 +36,10 @@ background-color: white;
     background-color: #f4f4f4;
     border: 2px solid #ccc;
     border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     height: 10vh;
-/*     border: solid 1px blue;
- */    
+    /*     border: solid 1px blue;
+ */
 }
 
 .logo-img {
@@ -46,24 +48,25 @@ background-color: white;
     border-radius: 8px;
     padding: 8px;
     background-color: #fff;
-/*     border: solid 1px red;
- */}
-
-.header {
-    
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    padding: 10px 0;
-    font-family: 'Libre Baskerville', serif;
-    font-weight: bold;
-/*     border: solid 1px green;
+    /*     border: solid 1px red;
  */
 }
 
-.header-header{
+.header {
+
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 10px 0;
+    font-family: 'Libre Baskerville', serif;
+    font-weight: bold;
+    /*     border: solid 1px green;
+ */
+}
+
+.header-header {
     display: flex;
     justify-content: space-between;
-background-color: #f4f4f4;
+    background-color: #f4f4f4;
 }
 
 .header-social {
@@ -76,57 +79,61 @@ background-color: #f4f4f4;
     font-family: 'Libre Baskerville', serif;
     font-weight: bold;
 }
-.header-social i{ 
+
+.header-social i {
     font-size: 15px;
     color: #333;
     transition: color 0.3s ease;
-/*     border: solid 1px red;
- */}
+    /*     border: solid 1px red;
+ */
+}
 
 .header-social i:hover {
-    color: #007bff; /
+    color: #007bff;/
 }
 
-.header-social a{
-    
-color: #333;
-text-decoration: none;
-padding: 5px 10px;
-transition: background-color 0.3s ease, color 0.3s ease;
+.header-social a {
+
+    color: #333;
+    text-decoration: none;
+    padding: 5px 10px;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.header-social a:hover{
+.header-social a:hover {
     background-color: #08c49c;
-    color:#fff;
+    color: #fff;
     border-radius: 5px;
 }
-.a-header-div{
+
+.a-header-div {
     display: flex;
     justify-content: space-between;
     align-items: center;
-/*     border: solid 1px red;
- */}
+    /*     border: solid 1px red;
+ */
+}
 
-.header-ul{
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 10px 30px;
+.header-ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 30px;
 }
 
 .header-ul .a-buttons {
-color: #333;
-text-decoration: none;
-padding: 8px 16px;
-transition: color 0.3s ease, backgroun-color 0.3s ease;
-font-family: 'Libre Baskerville', serif;
-font-weight: bold;
+    color: #333;
+    text-decoration: none;
+    padding: 8px 16px;
+    transition: color 0.3s ease, backgroun-color 0.3s ease;
+    font-family: 'Libre Baskerville', serif;
+    font-weight: bold;
 }
 
-.header-ul .a-buttons:hover{
-color: #007bff;
-background-color: #f0f0f0;
-border-radius: 5px;
+.header-ul .a-buttons:hover {
+    color: #007bff;
+    background-color: #f0f0f0;
+    border-radius: 5px;
 }
 
 .pro-gaming {
@@ -152,59 +159,246 @@ a.buttons {
     font-family: 'Libre Baskerville', serif;
     font-weight: bold;
 }
+
 .pro-gaming:hover {
     background-color: #0056b3;
 }
 
-.intro-desk{
+.intro-desk {
     position: relative;
     max-width: 800px;
     margin: 20px auto;
     background-color: #f9f2f2;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    font-family:'Bangers', cursive;
+    font-family: 'Bangers', cursive;
     color: #ed0505;
     text-shadow: #00ff80;
     padding: 20px;
-    overflow: hidden; 
+    overflow: hidden;
 }
-    
-.intro-desk:before{
-    content: ''; 
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 200px;
-    height: 200px;
-    background-image: url('/Imagenes/logo-two.png');
-    background-size: contain;
-    opacity: 0.1; 
-    pointer-events: none;
-    z-index: -1;
-}
+
 .title-paragraph,
 .paragraph-tex,
-.lema{
+.lema {
     position: relative;
     z-index: 1;
-    font-family: 'Bangers', cursive; 
-    color: #ff4500; 
-    text-shadow: 2px 2px 4px #1ad49054; 
+    font-family: 'Bangers', cursive;
+    color: #ff4500;
+    text-shadow: 2px 2px 4px #1ad49054;
 }
 
 
-.lema{
+.lema {
     margin-top: 20px;
     font-size: 24px;
 }
 
 .title-paragraph {
-    font-size: 32px; 
+    font-size: 32px;
     margin-bottom: 10px;
 }
 
 .paragraph-tex {
-    font-size: 20px; 
+    font-size: 20px;
 }
+
+/* Estilos para las cartas */
+.main-program .cards.container {
+    display: grid; /* Usar display grid para crear una cuadrícula */
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Columnas automáticas con un mínimo de 250px y máximo de 1fr */
+    gap: 20px; /* Espacio entre las cartas */
+}
+
+.main-program .cards {
+    position: relative; 
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: center; 
+    color: #333; 
+    overflow: hidden; 
+    transition: transform 0.3s ease, box-shadow 0.3s ease; 
+}
+
+
+.main-program .cards:hover {
+    transform: translateY(-5px); 
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
+}
+
+.main-program .cards:nth-child(1) {
+    background-color: #f2dede; 
+}
+
+.main-program .cards:nth-child(2) {
+    background-color: #d9edf7; 
+}
+
+.main-program .cards:nth-child(3) {
+    background-color: #dff0d8; 
+}
+
+.main-program .cards:nth-child(4) {
+    background-color: #fcf8e3; 
+}
+
+.main-program .cards:nth-child(5) {
+    background-color: #f4f4f4; 
+}
+
+.main-program .cards img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+
+.main-program .cards i {
+    font-size: 24px;
+    color: #FFA500; 
+    margin-bottom: 10px;
+}
+
+.main-program .cards h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.main-program .cards p {
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.main-program .cards.twitch {
+    background-color: #ffd700; 
+}
+
+
+.main-p-title {
+    text-align: center; 
+    margin-bottom: 30px; 
+}
+
+.main-p-title h2 {
+    font-size: 32px; 
+    color: #333; 
+    margin-bottom: 10px; 
+}
+
+.main-p-title p {
+    font-size: 18px; 
+    color: #666; 
+    line-height: 1.6; 
+}
+
+
+/* Estilos generales */
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f2f2f2;
+    margin: 0;
+    padding: 0;
+}
+
+.esports.container {
+    max-width: 1200px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.team-title {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.gorilla-title {
+    font-size: 32px;
+    color: #333;
+}
+
+.orange-bar {
+    height: 2px;
+    width: 100px;
+    background-color: #FFA500;
+    margin: 10px auto;
+}
+
+.esports.container {
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.team-title {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.gorilla-title {
+    font-size: 2.5em;
+    font-weight: bold;
+    color: #333;
+}
+
+.orange-bar {
+    font-size: 2em;
+    color: #FFA500;
+}
+
+#members {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.members-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.member-card {
+    flex: 0 1 calc(50% - 20px);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    overflow: hidden;
+    background-color: #fff;
+    transition: transform 0.3s;
+}
+
+.member-card:hover {
+    transform: translateY(-10px);
+}
+
+.member-card img {
+    width: 100%;
+    height: auto;
+}
+
+.data-esports {
+    padding: 15px;
+}
+
+.name {
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.esports-position {
+    font-size: 1.2em;
+    color: #777;
+    margin-bottom: 10px;
+}
+
+.member-description {
+    font-size: 1em;
+    color: #555;
+    margin-bottom: 10px;
+}
+
