--- a/Web Pro Players EA FC/styles.css
+++ b/Web Pro Players EA FC/styles.css
@@ -402,3 +402,36 @@ body {
     margin-bottom: 10px;
 }
 
+
+/* Footer  */
+
+.rigths {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #222;
+    color: #fff;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+.rights-logo img {
+    height: 40px; /* Tamaño más pequeño para el logo */
+    width: auto;
+    margin-right: 20px;
+}
+
+.rights-text-cont {
+    flex-grow: 1;
+    display: flex;
+    align-items: center; /* Centrar el texto verticalmente */
+    justify-content: center; /* Centrar el texto horizontalmente */
+}
+
+.rights-text {
+    font-size: 14px;
+    color: #ccc;
+    margin: 0;
+    text-align: center;
+}
+
